--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: next-github-actions-build
-          path: build
+          path: .next
        
