--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
           username: ${{ secrets.TEST_USERNAME }}
           port: ${{ secrets.TEST_PORT }}
           key: ${{ secrets.TEST_KEY }}
+          passphrase: ${{ secrets.TEST_PASSPHRASE }}
           password: ${{ secrets.TEST_PASSWORD }}
           script: |
             git clone https://github.com/IHsunChen/airbnb_clone.git
