--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,6 @@ jobs:
           password: ${{ secrets.TEST_PASSWORD }}
           script: |
             git clone https://github.com/IHsunChen/airbnb_clone.git
+            cd airbnb_clone
+            npm i
        
