--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,6 @@ jobs:
           passphrase: ${{ secrets.TEST_PASSPHRASE }}
           password: ${{ secrets.TEST_PASSWORD }}
           script: |
+            pwd
             
        
