--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,6 @@ jobs:
           passphrase: ${{ secrets.TEST_PASSPHRASE }}
           password: ${{ secrets.TEST_PASSWORD }}
           script: |
-            pwd
+            git clone https://github.com/IHsunChen/airbnb_clone.git
             
        
