--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
           script: |
             git clone https://github.com/IHsunChen/airbnb_clone.git
             cd airbnb_clone
-            /home/s0935/.nvm/versions/node/v16.14.0/bin/npm install
+            npm install
             
        
